[tool.poetry]
name = "site_level"
version = "0.1.0"
description = "A package for improving the process of shooting grade on construction projects."
authors = ["Dylan Garrett"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
textual = "^0.50.0"
matplotlib = "^3.8.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
textual = "^0.50.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
